--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,11 @@ main {
   flex: 1;
 }
 
+.btn-primary {
+  background-color: #f0c040;
+  color: black;
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
@@ -37,4 +42,8 @@ main {
 
 .product-info {
   padding: 1rem;
+}
+
+.img-large {
+  max-width: 100%;
 }
